🐛 Fix spacing calculation

--- a/frontend/app/assets/main.css
+++ b/frontend/app/assets/main.css
@@ -7,5 +7,5 @@
   }
 }
 @theme {
-  --spacing-content: calc(100vh - 64px);
+  --spacing-content: calc(100vh - 65px);
 }
